# gtest-tips

./: .gitignore  CMakeLists.txt  README.md  sample_communicator.cpp  test_sample.cpp
include/: sample_communicator.h
